lm-sensors CHANGES file
-----------------------

SVN HEAD
  fancontrol: Deal with moving hwmon attributes
  sensors-detect: Add detection of ADC128D818

3.3.5 "Happy Birthday Beddy" (2014-01-22)
  libsensors: Improve documentation of two functions
              Increase MAX_SENSORS_PER_TYPE to 33
  init: Fix EnvironmentFile in service files
        Drop syslog.target dependency from service files
  sensors-conf-convert: Add a manual page
  sensors-detect: Report built-in drivers as such
                  Use modules.builtin instead of /sys/module
                  Handle built-in modules properly
                  Add detection of NCT6791D
                  Add detection of NCT6681D, NCT6682D, and NCT6683D
                  Add detection of F71868A
                  Add detection of IT8603E
                  Add two PCI IDs for new family 15h AMD processors
                  Introduce automatic mode (--auto)
                  Detect incorrect non-interactive runs
                  Rework option handling
                  Fix use of uninitialized value 'vendor_id' on ppc64
                  Add detection of TMP451
                  Add detection of SMSC EMC2104

3.3.4 (2013-05-27)
  sensors.conf.5: Mention "sensors -u" to get the raw feature names
  sensors: Clarify what option -u is good for
  fancontrol: Fix handling of absolute paths in config
  pwmconfig: Print the initial PWM values
             Raise the detection threshold to 3/4
             Properly deal with multiple fan control
  sensors-detect: Add detection of AMD family 16h power sensors
                  Map IT8771E, IT8772E, IT8782F and IT8783F to it87
                  Use /sys/module instead of /proc/modules where available
                  Drop legacy sysconfig configuration file syntax
                  Stay alive when /dev/port is missing
                  Add detection of IT8752F
                  Add detection of MCP98244
                  Add detection of LM95234